[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/3D models/GhostEnemy/Ghost.obj" type="ArrayMesh" id=1]
[ext_resource path="res://scenes/enemies/EnemySpawner.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Ghost"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Ghost:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 2.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ghost:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -3 ), Vector3( 0, 0, 2.2 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ghost:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ghost:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -3 ) ]
}

[node name="EnemySpawner" type="Node3D"]
transform = Transform3D( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/Ghost = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Ghost" type="MeshInstance3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )
visible = false
mesh = ExtResource( 1 )

[node name="GhostPos" type="Marker3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.2 )

[node name="SummonTimer" type="Timer" parent="."]
one_shot = true

[node name="WarningPlayer" type="AudioStreamPlayer3D" parent="."]
volume_db = 10.0
bus = "SfxBus"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="SummonTimer" to="." method="_on_SummonTimer_timeout"]
